# zad5_3-delipl

./: .gitignore  .gitmodules  CMakeLists.txt  ClassDiagram.dia  Doxyfile.in  README.md
app/: main.cpp
cmake/: Doctest.cmake  Documentation.cmake  Misc.cmake
inc/: Animation.hpp  GnuPlotApi.hpp  Matrix.hpp  Matrixes.hpp  Menu.hpp  Object.hpp  Scene.hpp  SceneObject.hpp  Transform.hpp  Vector.hpp  Vectors.hpp  config.hpp  config.hpp.in  example.h  lacze_do_gnuplota.hh  matrix.hh  size.hh  vector.hh
inc/SceneObjects/: Cuboid.hpp  Drone.hpp  Peek.hpp  Plateau.hpp  Ridge.hpp  Rotor.hpp  Route.hpp  Terrain.hpp
prn/: Matrix.tpp  Vector.tpp
src/: Animation.cpp  GnuPlotApi.cpp  Matrixes.cpp  Menu.cpp  Object.cpp  Scene.cpp  SceneObject.cpp  Transform.cpp  example.cpp  lacze_do_gnuplota.cpp
src/SceneObjects/: Cuboid.cpp  Drone.cpp  Peek.cpp  Plateau.cpp  Ridge.cpp  Rotor.cpp  Route.cpp  SceneObject.cpp
tests/: CMakeLists.txt  drone.ut.cpp  dummy.cpp  main.cpp  matrix.ut.cpp  menu.ut.cpp  object.ut.cpp  scene.ut.cpp  sceneObject.ut.cpp  vector.ut.cpp
tests/doctest/parts/: ._doctest.cpp  storage.pyi  temp.pyi  uploadedfile.pyi  uploadhandler.pyi
tests/doctest/translation.pyi/: ads-track-digest256.sbstore  allow-flashallow-digest256.sbstore  base-fingerprinting-track-digest256.sbstore  block-flashsubdoc-digest256.sbstore  block-flashsubdoc-digest256.vlpset  content-track-digest256.sbstore  mozstd-trackwhite-digest256.vlpset  social-tracking-protection-twitter-digest256.sbstore  {11c6c5d4-82e2-4078-a0f6-aba176eb40da}.final  {7c895b41-ef6a-4ddb-b775-e327862628da}.final  {80fa7a0b-8a0d-42d7-ba64-4d66435c45da}.final  {b11be935-15ac-4413-a22e-15b2b1e5deda}.final  {f9ec9862-95c0-454b-bb34-2a2e543897da}.final
tests/doctest/translation.pyi/except-flashallow-digest256.sbstore/: goog-unwanted-proto.metadata
tests/doctest/translation.pyi/except-flashallow-digest256.sbstore/{b8d8292e-882e-44dd-aff7-b51f3a7da855}.final/: {44d297f3-0f08-4562-a411-b8d90baed648}.final  {6c8b6367-4910-47e6-8805-e53fe85e6e48}.final  {86d6c05f-595e-41f0-a4e3-2bc11ce00a48}.final  {d2d2be15-21aa-4526-8c68-c7b14ee2965b}.tmp
tests/doctest/translation.pyi/social-tracking-protection-linkedin-digest256.vlpset/: README.md  mail  serializers  servers
tests/doctest/translation.pyi/social-tracking-protection-linkedin-digest256.vlpset/signals.pyi/: build.make
